create rebuttal
